tests/baselines/reference/topLevelModuleDeclarationAndFile.errors.txt
tests/cases/conformance/externalModules/foo_2.ts(3,14): error TS2339: Property 'x' does not exist on type 'typeof import("vs/foo_0")'.


==== tests/cases/conformance/externalModules/foo_2.ts (1 errors) ====
    /// <reference path="foo_1.ts"/>
    import foo = require("vs/foo_0");
    var z1 = foo.x + 10;   // Should error, as declaration should win
                 ~
!!! error TS2339: Property 'x' does not exist on type 'typeof import("vs/foo_0")'.
    var z2 = foo.y() + 10; // Should resolve
    
==== tests/cases/conformance/externalModules/vs/foo_0/index.ts (0 errors) ====
    export var x: number = 42;
    
==== tests/cases/conformance/externalModules/foo_1.ts (0 errors) ====
    declare module "vs/foo_0" {
    	export var y: () => number;
    }
    
    